--- a/kas.yaml
+++ b/kas.yaml
@@ -2,7 +2,7 @@ header:
   version: 10
 machine: genericx86-64
 distro: poky
-tarbet: example-image.bb
+target: example-image.bb
 repos:
   mukube:
     layers:
