set meta-virtualization to use branch, remember to --update kas

--- a/kas.yaml
+++ b/kas.yaml
@@ -27,7 +27,7 @@ repos:
       meta-networking:
   meta-virtualization:
     url: https://git.yoctoproject.org/git/meta-virtualization
-    refspec: f861b05994eee9af13b5e7d3a851a128aba9a329
+    refspec: hardknott 
 
 local_conf_header:
   meta-k8s-setup: |
