--- a/kas.yaml
+++ b/kas.yaml
@@ -45,7 +45,7 @@ bblayers_conf_header:
     BBPATH = "${TOPDIR}"
     BBFILES ?= ""
 
-    DISTRO_FEATURES += "systemd virtualization"
+    DISTRO_FEATURES += "systemd virtualization k8s"
     DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
     VIRTUAL-RUNTIME_init_manager = "systemd"
     VIRTUAL-RUNTIME_initscripts = ""
