--- a/meta-k8s-setup/recipes-k8s-configuration/k8s-configuration/files/crictl.yaml
+++ b/meta-k8s-setup/recipes-k8s-configuration/k8s-configuration/files/crictl.yaml
@@ -1,5 +1,1 @@
-runtime-endpoint: unix:///run/containerd/containerd.sock
-image-endpoint: unix:///run/containerd/containerd.sock
-timeout: 2
-debug: true
-pull-image-on-create: false
+runtime-endpoint: unix:///var/run/crio/crio.sock
