Switch the EFI boot loader to systemd-boot
systemd-boot is much simpler and lightweight than GRUB (less attack
surface) and it can also do TPM measurements.

--- a/kas-test.yaml
+++ b/kas-test.yaml
@@ -36,6 +36,7 @@ repos:
 local_conf_header:
   meta-k8s-setup: |
     IMAGE_FSTYPES += "iso live"
+    EFI_PROVIDER = "systemd-boot"
 
     INHERIT += "extrausers"
     EXTRA_USERS_PARAMS = "usermod -P root root;"
