--- a/meta-k8s-setup/recipes-kernel/linux/linux-yocto/mukube.cfg
+++ b/meta-k8s-setup/recipes-kernel/linux/linux-yocto/mukube.cfg
@@ -281,3 +281,6 @@ CONFIG_BLK_DEV_IO_TRACE=y
 CONFIG_PROVIDE_OHCI1394_DMA_INIT=y
 CONFIG_EARLY_PRINTK_DBGP=y
 CONFIG_DEBUG_BOOT_PARAMS=y
+CONFIG_ZRAM=y
+CONFIG_CRYPTO_LZ4=y
+CONFIG_ZSMALLOC=y
