Implement integrity checking of the rootfs
As part of this change we are also switching to a partitioned image[1]
(using wic) as dm-verity doesn't work with the "live images" due to a
circular dependency AFAIU.

With the switch to partitioned image[1] we are also ditching support for
legacy boot.

[1] https://docs.yoctoproject.org/dev-manual/common-tasks.html#creating-partitioned-images-using-wic

--- a/kas-test.yaml
+++ b/kas-test.yaml
@@ -35,8 +35,16 @@ repos:
     refspec: hardknott
 local_conf_header:
   meta-k8s-setup: |
-    IMAGE_FSTYPES += "iso live"
+    EXTRA_IMAGEDEPENDS += "ovmf qemu-system-native qemu-helper-native"
     EFI_PROVIDER = "systemd-boot"
+
+    IMAGE_FSTYPES += "wic"
+    IMAGE_CLASSES += "dm-verity-img"
+    WKS_FILE = "mukube-minimal.wks.in"
+    DM_VERITY_IMAGE = "mukube-minimal"
+    DM_VERITY_IMAGE_TYPE = "ext4"
+    INITRAMFS_IMAGE = "dm-verity-image-initramfs"
+    INITRAMFS_FSTYPES = "cpio.gz"
 
     INHERIT += "extrausers"
     EXTRA_USERS_PARAMS = "usermod -P root root;"
