Added testimage inherit to our testimange

--- a/kas-testing.yaml
+++ b/kas-testing.yaml
@@ -3,3 +3,8 @@ header:
   includes:
     - kas-base.yaml
 target: mukube-test-image
+
+local_conf_header:
+  testing: |
+    INHERIT += "testimage"
+    TEST_SUITES = " kubeadm"
