Add sbctl[1] recipe for Secure Boot and enable OVMF Secure Boot
[1] https://github.com/Foxboron/sbctl

--- a/kas-base.yaml
+++ b/kas-base.yaml
@@ -8,6 +8,7 @@ target: mukube-image
 repos:
   mukube:
     layers:
+      meta-secure-boot:
       meta-k8s-setup:
   poky:
     url: https://git.yoctoproject.org/git/poky
