--- a/kas-base.yaml
+++ b/kas-base.yaml
@@ -42,8 +42,8 @@ local_conf_header:
 
     IMAGE_FSTYPES += "wic"
     IMAGE_CLASSES += "dm-verity-img"
-    WKS_FILE = "mukube-minimal.wks.in"
-    DM_VERITY_IMAGE = "mukube-minimal"
+    WKS_FILE = "mukube.wks.in"
+    DM_VERITY_IMAGE ?= "mukube"
     DM_VERITY_IMAGE_TYPE = "ext4"
     INITRAMFS_IMAGE = "dm-verity-image-initramfs"
     INITRAMFS_FSTYPES = "cpio.gz"
