--- a/kas-testing.yaml
+++ b/kas-testing.yaml
@@ -8,4 +8,4 @@ local_conf_header:
   testing: |
     INHERIT += "testimage"
     TEST_SUITES = " kubeadm"
-    QB_DEFAULT_FSTYPE = "iso"
+    DM_VERITY_IMAGE = "mukube-test-image"
