Update systemd to 249.3 from 247.6
systemd v248 added support for unlockling LUKS2 volumes with TPM2, FIDO2
and PKCS#11[1]. We need the TPM2 support.

[1] http://0pointer.net/blog/unlocking-luks2-volumes-with-tpm2-fido2-pkcs11-security-hardware-on-systemd-248.html

--- a/kas-base.yaml
+++ b/kas-base.yaml
@@ -17,6 +17,10 @@ repos:
       meta-poky:
       meta-skeleton:
       meta-yocto-bsp:
+    patches:
+      systemd:
+        repo: mukube
+        path: patches/systemd/
   meta-openembedded:
     url: https://github.com/openembedded/meta-openembedded.git
     refspec: hardknott
