--- a/kas-testing.yaml
+++ b/kas-testing.yaml
@@ -9,3 +9,5 @@ local_conf_header:
     INHERIT += "testimage"
     TEST_SUITES = " kubeadm"
     DM_VERITY_IMAGE = "mukube-test-image"
+
+    QB_DEFAULT_FSTYPE = "wic"
