Fixing hosttools variable overwrite
When the bitbake environment is initialized, e.g. via the oe-env-init script, links are added to the HOSTTOOLS_DIR for each executeable in the HOSTTOOLS variable. These are not removed again later, which is why the mistake was not caught previously.

--- a/kas-base.yaml
+++ b/kas-base.yaml
@@ -56,7 +56,7 @@ local_conf_header:
     INITRAMFS_IMAGE = "dm-verity-image-initramfs"
     INITRAMFS_FSTYPES = "cpio.gz"
 
-    HOSTTOOLS = "docker"
+    HOSTTOOLS += "docker"
 
 bblayers_conf_header:
   meta-k8s-setup: |
