--- a/kas-testing.yaml
+++ b/kas-testing.yaml
@@ -7,7 +7,7 @@ target: mukube-test-image
 local_conf_header:
   testing: |
     INHERIT += "testimage"
-    TEST_SUITES = " kubeadm"
+    TEST_SUITES = " kubeadm config" 
     DM_VERITY_IMAGE = "mukube-test-image"
 
     HOSTTOOLS += "mkfs.ext4"
