Enable and make systemd-repart work
This commit adds a few patches required for making repart work with our image:
poky/openembedded-core (all upstreamed):
* 0001-systemd-Add-repart-PACKAGECONFIG.patch
* 0001-systemd-Add-homed-PACKAGECONFIG.patch
  Fix QA issue when repart, openssl and cryptsetup are enabled
* 0001-wic-Add-extra-space-argument.patch
  Allow extra space to be added after the last partition, which make
  testing repart in QEMU easier

meta-openembedded (not yet accepted by upstream[1])
* 0001-cryptsetup-upgrade-2.3.5-2.3.6.patch
  Cherry-pick required for the next patch to apply cleanly
* 0001-cryptsetup-Add-runtime-dependency-on-lvm2-udevrules-.patch
  Fix missing udev rules needed for repart/cryptsetup luksOpen to work

systemd (all upstreamed)
* 0001-repart-don-t-prefix-sysroot-twice.patch
  Cherry-pick required for the next patch to apply cleanly
* 0001-repart-Support-volatile-root-for-finding-the-root-pa.patch
  Make repart work with our ramrootfs setup

It also fix the alignment of the root partition as repart can't handle
it[2] and it should be aligned nevertheless.

The GPT partition type UUID has also been changed to "Root Partition
(x86)" per [3], so we can use "linux-generic" for repart.

[1] https://github.com/openembedded/meta-openembedded/pull/431
[2] https://github.com/systemd/systemd/issues/20622
[3] https://systemd.io/DISCOVERABLE_PARTITIONS/

--- a/kas-base.yaml
+++ b/kas-base.yaml
@@ -20,7 +20,10 @@ repos:
     patches:
       systemd:
         repo: mukube
-        path: patches/systemd/
+        path: patches/poky/systemd/
+      misc:
+        repo: mukube
+        path: patches/poky/misc/
   meta-openembedded:
     url: https://github.com/openembedded/meta-openembedded.git
     refspec: hardknott
@@ -30,6 +33,10 @@ repos:
       meta-python:
       meta-networking:
       meta-perl:
+    patches:
+      misc:
+        repo: mukube
+        path: patches/meta-openembedded/misc/
   meta-virtualization:
     url: https://git.yoctoproject.org/git/meta-virtualization
     refspec: hardknott 
@@ -57,6 +64,8 @@ local_conf_header:
     INITRAMFS_FSTYPES = "cpio.gz"
 
     HOSTTOOLS += "docker"
+    # 1GiB
+    WIC_CREATE_EXTRA_ARGS = "--extra-space 1073741824"
 
 bblayers_conf_header:
   meta-k8s-setup: |
