--- a/meta-k8s-setup/recipes-k8s-configuration/k8s-configuration/files/k8s-configuration.service
+++ b/meta-k8s-setup/recipes-k8s-configuration/k8s-configuration/files/k8s-configuration.service
@@ -1,8 +1,15 @@
 [Unit]
 Description=service that unpacks the configuration files
 
-After=config.mount
+DefaultDependencies=no
+Conflicts=shutdown.target
+RequiresMountsFor=/config
+After=local-fs.target
+Before=sysinit.target shutdown.target
 
 [Service]
 ExecStart=tar -xvf /config/config.tar.gz -C /
 Type=oneshot
+
+[Install]
+WantedBy=config.mount
