rewrote recipe building configurator tar-balls

--- a/kas-base.yaml
+++ b/kas-base.yaml
@@ -9,6 +9,7 @@ repos:
   mukube:
     layers:
       meta-k8s-setup:
+      meta-k8s-cluster:
   poky:
     url: https://git.yoctoproject.org/git/poky
     refspec: hardknott
