--- a/meta-k8s-setup/recipes-core/base-files/base-files/50-volatile.conf
+++ b/meta-k8s-setup/recipes-core/base-files/base-files/50-volatile.conf
@@ -1,6 +1,6 @@
 [Partition]
 Type=linux-generic
-SizeMaxBytes=4G
+SizeMaxBytes=100M
 UUID=ce28e84c-ab6b-4852-9301-86083840b6f4
 Format=ext4
 Encrypt=key-file
