Use the TPM for unlocking the encrypted partition

--- a/meta-k8s-setup/conf/machine/mukube.conf
+++ b/meta-k8s-setup/conf/machine/mukube.conf
@@ -3,5 +3,5 @@
 #@DESCRIPTION: Machine configuration for mukube.
 
 include conf/machine/genericx86-64.conf
-MACHINE_FEATURES += "vfat"
+MACHINE_FEATURES += "vfat tpm2"
 MACHINEOVERRIDES =. "genericx86-64:"
