--- a/meta-secure-boot/recipes-secure-boot/secure-boot-setup/secure-boot-setup/secure-boot-setup.service
+++ b/meta-secure-boot/recipes-secure-boot/secure-boot-setup/secure-boot-setup/secure-boot-setup.service
@@ -1,6 +1,11 @@
 [Unit]
 Description=Create secure boot keys and enroll them
 ConditionFileNotEmpty=!/sys/firmware/efi/efivars/PK-8be4df61-93ca-11d2-aa0d-00e098032b8c
+DefaultDependencies=no
+Conflicts=shutdown.target
+After=local-fs.target
+Before=sysinit.target shutdown.target
+SuccessAction=reboot
 
 [Service]
 Type=oneshot
@@ -10,4 +15,4 @@ ExecStart=sbctl sign /efi/EFI/BOOT/bootx64.efi
 ExecStart=sbctl sign /efi/EFI/Linux/linux.efi
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=sysinit.target
