changed local conf in kas file to match new target

--- a/kas-cluster.yaml
+++ b/kas-cluster.yaml
@@ -6,8 +6,8 @@ repos:
   mukube:
     layers:
       meta-k8s-cluster:
-target: mukube-test-image
+target: mukube-cluster-image
 local_conf_header:
   dev: |
-    DM_VERITY_IMAGE = "mukube-test-image"
+    DM_VERITY_IMAGE = "mukube-cluster-image"
 
