Don't use Docker on the host for bundling images
Neither Docker nor Podman have a native recipe[1], so instead we are
using Skopeo.

[1] It isn't easy due to all the dependencies (see also [2]).
[2] https://lists.yoctoproject.org/g/meta-virtualization/topic/61269958#4299

--- a/kas-base.yaml
+++ b/kas-base.yaml
@@ -38,6 +38,10 @@ repos:
   meta-virtualization:
     url: https://git.yoctoproject.org/git/meta-virtualization
     refspec: hardknott 
+    patches:
+      misc:
+        repo: mukube
+        path: patches/meta-virtualization/misc/
   meta-security: 
     url: https://git.yoctoproject.org/cgit/cgit.cgi/meta-security/
     refspec: hardknott
@@ -61,7 +65,6 @@ local_conf_header:
     INITRAMFS_IMAGE = "dm-verity-image-initramfs"
     INITRAMFS_FSTYPES = "cpio.gz"
 
-    HOSTTOOLS += "docker"
     # 1GiB
     WIC_CREATE_EXTRA_ARGS = "--extra-space 1073741824"
 
