--- a/meta-k8s-setup/recipes-k8s-configuration/k8s-configuration/files/k8s-configuration.service
+++ b/meta-k8s-setup/recipes-k8s-configuration/k8s-configuration/files/k8s-configuration.service
@@ -1,15 +1,15 @@
 [Unit]
 Description=service that unpacks the configuration files
-
+RequiresMountsFor=/var/state
+ConditionPathIsDirectory=/var/state/config
 DefaultDependencies=no
 Conflicts=shutdown.target
-RequiresMountsFor=/config
-After=local-fs.target
+After=local-fs.target copy-config-to-state.service
 Before=sysinit.target shutdown.target
 
 [Service]
-ExecStart=tar -xvf /config/config.tar.gz -C /
+ExecStart=tar -xvf /var/state/config/config.tar.gz -C /
 Type=oneshot
 
 [Install]
-WantedBy=config.mount
+WantedBy=sysinit.target
