--- a/kas-base.yaml
+++ b/kas-base.yaml
@@ -45,12 +45,19 @@ repos:
   meta-security: 
     url: https://git.yoctoproject.org/cgit/cgit.cgi/meta-security/
     refspec: hardknott
+    layers:
+      .:
+      meta-tpm:
+    patches:
+      swtpm:
+        repo: mukube
+        path: patches/meta-security/swtpm/
   meta-selinux:
     url: https://git.yoctoproject.org/cgit/cgit.cgi/meta-selinux/
     refspec: hardknott
 local_conf_header:
   meta-k8s-setup: |
-    EXTRA_IMAGEDEPENDS += "ovmf qemu-system-native qemu-helper-native"
+    EXTRA_IMAGEDEPENDS += "ovmf qemu-system-native qemu-helper-native swtpm-wrappers-native"
     QB_MEM = "6G"
     QB_OPT_APPEND:append = " -smp 4"
     QB_MACHINE = "-machine accel=kvm:tcg"
