Auto run tests and prefer IMAGE_CLASSES over INHERIT
The testimage documentation says it is preferable to use IMAGE_CLASSES rather than INHERIT to inherit the testimage class

By setting TESTIMAGE_AUTO to 1 tests are automatically run when the mukube-test-image is built

--- a/kas-testing.yaml
+++ b/kas-testing.yaml
@@ -6,7 +6,7 @@ target: mukube-test-image
 
 local_conf_header:
   testing: |
-    INHERIT += "testimage"
+    IMAGE_CLASSES += "testimage"
     TEST_SUITES = " kubeadm config" 
     DM_VERITY_IMAGE = "mukube-test-image"
 
