Replace patch with submitted upstream versions
Upstream submissions:
https://lists.yoctoproject.org/g/yocto/topic/meta_security_patch/85897588
https://lists.yoctoproject.org/g/yocto/topic/meta_security_patch_swtpm/85898116

--- a/kas-base.yaml
+++ b/kas-base.yaml
@@ -49,9 +49,9 @@ repos:
       .:
       meta-tpm:
     patches:
-      swtpm:
+      misc:
         repo: mukube
-        path: patches/meta-security/swtpm/
+        path: patches/meta-security/misc/
   meta-selinux:
     url: https://git.yoctoproject.org/cgit/cgit.cgi/meta-selinux/
     refspec: hardknott
