Add microcodes for Intel and AMD processors
"Processor manufacturers release stability and security updates to the
processor microcode. These updates provide bug fixes that can be
critical to the stability of your system. Without them, you may
experience spurious crashes or unexpected system halts that can be
difficult to track down."[1]

[1] https://wiki.archlinux.org/index.php?title=Microcode&oldid=688966

--- a/kas-base.yaml
+++ b/kas-base.yaml
@@ -55,6 +55,9 @@ repos:
   meta-selinux:
     url: https://git.yoctoproject.org/cgit/cgit.cgi/meta-selinux/
     refspec: hardknott
+  meta-intel:
+    url: https://git.yoctoproject.org/git/meta-intel/
+    refspec: hardknott
 local_conf_header:
   meta-k8s-setup: |
     EXTRA_IMAGEDEPENDS += "ovmf qemu-system-native qemu-helper-native swtpm-wrappers-native"
