--- a/meta-k8s-setup/conf/layer.conf
+++ b/meta-k8s-setup/conf/layer.conf
@@ -8,6 +8,8 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "meta-k8s-setup"
 BBFILE_PATTERN_meta-k8s-setup = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-k8s-setup = "6"
+# Additional license directories.
+LICENSE_PATH += "${LAYERDIR}/custom-licenses"
 
 LAYERDEPENDS_meta-k8s-setup = "core"
 LAYERSERIES_COMPAT_meta-k8s-setup = "hardknott"
