--- a/kas-testing.yaml
+++ b/kas-testing.yaml
@@ -9,4 +9,4 @@ local_conf_header:
     IMAGE_CLASSES += "testimage"
     TEST_SUITES = " kubeadm config" 
     DM_VERITY_IMAGE = "mukube-test-image"
-
+    QB_OPT_APPEND:append = " -drive file=${MUKUBE_CONFIG_PARTITION},format=raw,if=virtio"
