--- a/meta-k8s-setup/recipes-kernel/linux/linux-yocto/mukube.cfg
+++ b/meta-k8s-setup/recipes-kernel/linux/linux-yocto/mukube.cfg
@@ -97,6 +97,7 @@ CONFIG_NF_NAT=y
 CONFIG_NF_TABLES=y
 CONFIG_NF_TABLES_INET=y
 CONFIG_NFT_REJECT=m
+CONFIG_NETFILTER_XT_SET=m
 CONFIG_NETFILTER_XT_MARK=m
 CONFIG_NETFILTER_XT_TARGET_CONNSECMARK=y
 CONFIG_NETFILTER_XT_TARGET_LOG=m
