--- a/meta-k8s-setup/recipes-kernel/linux/linux-yocto/mukube.cfg
+++ b/meta-k8s-setup/recipes-kernel/linux/linux-yocto/mukube.cfg
@@ -107,6 +107,7 @@ CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
 CONFIG_NETFILTER_XT_MATCH_ADDRTYPE=m
 CONFIG_NETFILTER_XT_MATCH_COMMENT=m
 CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
+CONFIG_NETFILTER_XT_MATCH_PHYSDEV=m
 CONFIG_NETFILTER_XT_MATCH_POLICY=y
 CONFIG_NETFILTER_XT_MATCH_STATE=y
 CONFIG_NF_LOG_ARP=m
