Add kernel modules required by Ceph
The ceph module is used for Ceph FSs and rbd for block devices.

The config options was pulled from Arch Linux's linux package[1].

[1] https://github.com/archlinux/svntogit-packages/blob/2ca04d8f2c80b466fc27664612f104e4cd9017f1/trunk/config

--- a/meta-k8s-setup/recipes-kernel/linux/linux-yocto/mukube.cfg
+++ b/meta-k8s-setup/recipes-kernel/linux/linux-yocto/mukube.cfg
@@ -285,3 +285,11 @@ CONFIG_DEBUG_BOOT_PARAMS=y
 CONFIG_ZRAM=y
 CONFIG_CRYPTO_LZ4=y
 CONFIG_ZSMALLOC=y
+CONFIG_CEPH_LIB=m
+CONFIG_CEPH_LIB_PRETTYDEBUG=y
+CONFIG_CEPH_LIB_USE_DNS_RESOLVER=y
+CONFIG_CEPH_FS=m
+CONFIG_CEPH_FSCACHE=y
+CONFIG_CEPH_FS_POSIX_ACL=y
+CONFIG_CEPH_FS_SECURITY_LABEL=y
+CONFIG_BLK_DEV_RBD=m
