--- a/meta-k8s-setup/conf/layer.conf
+++ b/meta-k8s-setup/conf/layer.conf
@@ -12,5 +12,5 @@ BBFILE_PRIORITY_meta-k8s-setup = "6"
 LICENSE_PATH += "${LAYERDIR}/custom-licenses"
 
 LAYERDEPENDS_meta-k8s-setup = "core"
-LAYERSERIES_COMPAT_meta-k8s-setup = "hardknott"
+LAYERSERIES_COMPAT_meta-k8s-setup = "honister"
 
