--- a/meta-secure-boot/conf/layer.conf
+++ b/meta-secure-boot/conf/layer.conf
@@ -9,4 +9,4 @@ BBFILE_COLLECTIONS += "secure-boot"
 BBFILE_PATTERN_secure-boot = "^${LAYERDIR}/"
 BBFILE_PRIORITY_secure-boot = "5"
 
-LAYERSERIES_COMPAT_secure-boot = "hardknott"
+LAYERSERIES_COMPAT_secure-boot = "honister"
