--- a/meta-k8s-setup/recipes-k8s-testing/k8s-testing/files/InitConfiguration.yaml
+++ b/meta-k8s-setup/recipes-k8s-testing/k8s-testing/files/InitConfiguration.yaml
@@ -1,24 +1,24 @@
 # SET CONTROL PLANE IP AND PORT
-apiVersion: kubeadm.k8s.io/v1beta2
+apiVersion: kubeadm.k8s.io/v1beta3
 kind: InitConfiguration
 nodeRegistration:
   name: genericx86-64
   criSocket: unix:///var/run/crio/crio.sock
-  kubeletExtraArgs:
-    cgroup-driver: "systemd"
-    resolv-conf: /etc/resolv.conf
 ---
-apiVersion: kubeadm.k8s.io/v1beta2
+apiVersion: kubelet.config.k8s.io/v1beta1
+kind: KubeletConfiguration
+cgroupDriver: systemd
+---
+apiVersion: kubeadm.k8s.io/v1beta3
 imageRepository: k8s.gcr.io
 kind: ClusterConfiguration
 clusterName: kubernetes
 certificatesDir: /etc/kubernetes/pki
-kubernetesVersion: v1.20.7 # TODO inject version
+kubernetesVersion: v1.22.1 # TODO inject version
 networking:
   dnsDomain: cluster.local
   serviceSubnet: 10.96.0.0/12
-dns:
-  type: CoreDNS
+dns: {}
 scheduler: {}
 apiServer:
   timeoutForControlPlane: 10m0s
