Switch CNI to Cilium
This adds the missing pieces for using Cilium as CNI, which we
have switched to[1][2][3].

[1] https://github.com/distributed-technologies/helm-charts/pull/224
[2] https://github.com/distributed-technologies/helm-charts/pull/229
[3] https://github.com/distributed-technologies/yggdrasil/pull/61

--- a/meta-k8s-setup/recipes-kernel/linux/linux-yocto/mukube.cfg
+++ b/meta-k8s-setup/recipes-kernel/linux/linux-yocto/mukube.cfg
@@ -293,3 +293,8 @@ CONFIG_CEPH_FSCACHE=y
 CONFIG_CEPH_FS_POSIX_ACL=y
 CONFIG_CEPH_FS_SECURITY_LABEL=y
 CONFIG_BLK_DEV_RBD=m
+CONFIG_NET_CLS_BPF=y
+CONFIG_CRYPTO_USER_API_HASH=y
+CONFIG_NETFILTER_XT_TARGET_TPROXY=m
+CONFIG_NETFILTER_XT_TARGET_CT=m
+CONFIG_NETFILTER_XT_MATCH_SOCKET=m
